tests/handlers/snapshots/handler_tests__handlers__validation__mutation_record_knowledge_malformed_character_id.snap
---
source: tests/handlers/validation.rs
expression: error_msg
---
Invalid character_id: Parse error: Unexpected token `-`, expected :
 --> [1:4]
  |
1 | bad-id-format
  |    ^
